Make sources compatible with Java 8